--- a/templates/pages/shop.html
+++ b/templates/pages/shop.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -11,7 +12,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
 
   <title>
     Giftos
@@ -21,12 +22,12 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
 
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
 
 <body>
@@ -105,7 +106,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p1.png" alt="">
+                <img src="{% static 'images/p1.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -130,7 +131,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p2.png" alt="">
+                <img src="{% static 'images/p2.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -155,7 +156,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p3.png" alt="">
+                <img src="{% static 'images/p3.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -180,7 +181,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p4.png" alt="">
+                <img src="{% static 'images/p4.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -205,7 +206,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p5.png" alt="">
+                <img src="{% static 'images/p5.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -230,7 +231,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p6.png" alt="">
+                <img src="{% static 'images/p6.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -255,7 +256,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p7.png" alt="">
+                <img src="{% static 'images/p7.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -280,7 +281,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p8.png" alt="">
+                <img src="{% static 'images/p8.png' %}" alt="">
               </div>
               <div class="detail-box">
                 <h6>
@@ -401,11 +402,11 @@
   <!-- end info section -->
 
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
-  <script src="js/custom.js"></script>
+  <script src="{% static 'js/custom.js' %}"></script>
 
 </body>
 
