--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="eng">
 
 <head>
   <!-- Basic -->
-    {% load static %}
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
@@ -30,6 +30,16 @@
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
 <body>
+
+{% block content %}
+
+{% endblock %}
+
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+  </script>
+  <script src="{% static 'js/custom.js' %}"></script>
 
 </body>
 </html>
